@startuml diagrama_de_classe

skinparam classAttributeIconSize 0
skinparam monochrome true
hide circle

class Usuario {
    - unidade : String
    - matricula : int
    - username : String
    - email : String
}

class Aluno {
    - telefone : int
    - cpf : String
    - dt_nascimento : String  
    - procurando_estagio : bool
    - periodo : int

    + ganhar_horas_estagio(horas_estagiadas)
}

class Coordenador {
    - area : String
    + aprovar_relatorio()
    + reprovar_relatorio()
}

class Secretaria {
    + aprovar_tce()
    + reprovar_tce()
}

class Curso {
    - nome : String
}

class Empresa {
    - nome : String
    - telefone : int
    - endereco : String
    - cnpj : int
}

class Tce {
    - status : String
    - apoliceseguro : String
    - bolsa: float

    +se_aprovar()
    +se_reprovar()
}

class Estagio {
    -dtinicio : String
    -dtfim : String
    -cargahorariasemanal : int
}

class RelatorioSemestral {
    -status : String
    -data_envio : String
    -semestre : int
    -horas_estagiadas: int

    +se_aprovar()
    +se_reprovar()
}




Usuario <|-- Secretaria
Usuario <|-- Aluno
Usuario <|-- Coordenador


Secretaria -- Tce : aprova/reprova
Coordenador -- RelatorioSemestral : aprova/reprova
Coordenador -- Curso
Aluno -- Curso
Tce -- Estagio
Estagio -- Empresa